#116 SearchCocktails without loops and only one request